# Ashkan_Net_Tool

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
core/: CMakeLists.txt  interface.cpp  interface.hpp
core/include/: capture-wrapper.hpp  logger.hpp  net-core.hpp  packet-receiver.hpp
core/src/: capture-wrapper.cpp  capture-wrapper.hpp  logger.cpp  net-core.cpp  net-core.hpp  packet-receiver.cpp  packet-receiver.hpp
core/src/Task/: task.cpp  task.hpp
core/src/Task/tasks/: arp-poison-detection-task.cpp  arp-poison-detection-task.hpp  arp-poisoning-task.cpp  arp-poisoning-task.hpp  dtp-negotiation.cpp  dtp-negotiation.hpp  mitm-packet-forwarding.cpp  mitm-packet-forwarding.hpp  vlan-hopping-task.cpp  vlan-hopping-task.hpp
core/src/data_holders/: wifi-ap.hpp  wifi.hpp
core/src/packet_receiver/: packet-receiver.hpp
core/src/packet_receiver/recievers/: arp-poison-detection.cpp  mitm-forwarding.cpp  vlan-hopping.cpp  wifi-ap-scanning.cpp  wifi-scanning.cpp  wpa2-handshake-capturing.cpp
core/src/task/: task.cpp  task.hpp
core/src/task/tasks/: arp-poison-detection-task.cpp  arp-poison-detection-task.hpp  arp-poisoning-task.cpp  arp-poisoning-task.hpp  deauth-packet-sending.cpp  deauth-packet-sending.hpp  dtp-domain-extraction-task.cpp  dtp-domain-extraction-task.hpp  dtp-domain-extraction.cpp  dtp-domain-extraction.hpp  dtp-negotiation.cpp  dtp-negotiation.hpp  mitm-packet-forwarding.cpp  mitm-packet-forwarding.hpp  task-headers.hpp  vlan-hopping-task.cpp  vlan-hopping-task.hpp  wifi-ap-scanning-task.cpp  wifi-ap-scanning-task.hpp  wifi-host-scanning-task.cpp  wifi-host-scanning-task.hpp  wifi-password-cracking-task.cpp  wifi-password-cracking-task.hpp  wpa-2-cracking-thread.cpp  wpa-2-cracking-thread.hpp  wpa-2-hand-shake-capture-task.cpp
core/utils/: task.cpp  task.hpp
model/: CMakeLists.txt  interface.cpp  interface.h
model/include/: capture_wrapper.h  logger.h  net_core.h  packet_receiver.h
model/src/: capture_wrapper.cpp  logger.cpp  net_core.cpp  packet_receiver.cpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  capture-wrapper.cpp  capture-wrapper.hpp  interface.cpp  interface.hpp  net-core.cpp  net-core.hpp
src/core/data-holders/: wifi.hpp
src/core/packet-receiver/: packet-receiver.hpp
src/core/packet-receiver/recievers/: arp-poison-detection.cpp  dtp-domain-extraction.cpp  mitm-forwarding.cpp  vlan-hopping.cpp  wifi-ap-scanning.cpp  wifi-host-scanning.cpp  wpa2-handshake-capturing.cpp
src/core/task/: task.cpp  task.hpp
src/core/task/tasks/: arp-poison-detection-task.hpp  arp-poisoning-task.cpp  arp-poisoning-task.hpp  deauth-packet-sending.cpp  deauth-packet-sending.hpp  dtp-domain-extraction-task.hpp  dtp-negotiation.hpp  task-headers.hpp  vlan-hopping-task.cpp  vlan-hopping-task.hpp  wifi-ap-scanning-task.hpp  wifi-host-scanning-task.hpp  wifi-password-cracking-task.cpp  wpa-2-cracking-thread.cpp  wpa-2-cracking-thread.hpp  wpa-2-hand-shake-capture-task.hpp
src/core/task/tasks/arp/: arp-poison-detection-task.cpp  arp-poison-detection-task.hpp  arp-poisoning-task.cpp  arp-poisoning-task.hpp
src/core/task/tasks/dtp/: dtp-domain-extraction-task.cpp  dtp-domain-extraction-task.hpp  dtp-negotiation.cpp  dtp-negotiation.hpp
src/core/task/tasks/man-in-the-middle/: mitm-packet-forwarding.cpp  mitm-packet-forwarding.hpp
src/core/task/tasks/vlan/: vlan-hopping-task.cpp  vlan-hopping-task.hpp
src/core/task/tasks/wireless/: deauth-packet-sending.cpp  deauth-packet-sending.hpp  wifi-ap-scanning-task.cpp  wifi-ap-scanning-task.hpp  wifi-host-scanning-task.cpp  wifi-host-scanning-task.hpp  wifi-password-cracking-task.cpp  wifi-password-cracking-task.hpp  wpa-2-cracking-thread.cpp  wpa-2-cracking-thread.hpp  wpa-2-hand-shake-capture-task.cpp  wpa-2-hand-shake-capture-task.hpp
src/libs/PcapPlusPlus-25.05/Common++/header/: IpUtils.h
src/libs/PcapPlusPlus-25.05/Common++/src/: IpUtils.cpp
src/libs/PcapPlusPlus-25.05/Examples/DnsSpoofing/: main.cpp
src/libs/PcapPlusPlus-25.05/Examples/KniPong/: main.cpp
src/libs/PcapPlusPlus-25.05/Examples/PcapSplitter/: ConnectionSplitters.h  IPPortSplitters.h  main.cpp
src/libs/PcapPlusPlus-25.05/Examples/TcpReassembly/: main.cpp
src/libs/PcapPlusPlus-25.05/Packet++/header/: PacketUtils.h  SSHLayer.h
src/libs/PcapPlusPlus-25.05/Packet++/src/: RawPacket.cpp
src/libs/PcapPlusPlus-25.05/Pcap++/header/: PcapFilter.h
src/libs/PcapPlusPlus-25.05/Pcap++/src/: PcapFilter.cpp
src/libs/imgui/examples/: imgui_examples.sln
src/libs/imgui/examples/example_allegro5/: example_allegro5.vcxproj
src/libs/imgui/examples/example_glfw_opengl2/: example_glfw_opengl2.vcxproj
src/libs/imgui/examples/example_glfw_opengl3/: example_glfw_opengl3.vcxproj
src/libs/imgui/examples/example_glfw_vulkan/: example_glfw_vulkan.vcxproj
src/libs/imgui/examples/example_glut_opengl2/: example_glut_opengl2.vcxproj
src/libs/imgui/examples/example_sdl2_directx11/: example_sdl2_directx11.vcxproj
src/libs/imgui/examples/example_sdl2_opengl2/: example_sdl2_opengl2.vcxproj
src/libs/imgui/examples/example_sdl2_opengl3/: example_sdl2_opengl3.vcxproj
src/libs/imgui/examples/example_sdl2_sdlrenderer2/: example_sdl2_sdlrenderer2.vcxproj.filters
src/libs/imgui/examples/example_sdl3_opengl3/: example_sdl3_opengl3.vcxproj
src/libs/imgui/examples/example_sdl3_sdlgpu3/: example_sdl3_sdlgpu3.vcxproj.filters
src/libs/imgui/examples/example_sdl3_sdlrenderer3/: example_sdl3_sdlrenderer3.vcxproj  example_sdl3_sdlrenderer3.vcxproj.filters
src/ui/: CMakeLists.txt  config.h  imgui-ui.cpp  imgui-ui.hpp
src/ui/windows/: main-window.cpp  main-window.hpp  sub-window.cpp  sub-window.hpp
src/utils/: CMakeLists.txt  logger.cpp  logger.hpp  net-utils.cpp  net-utils.hpp
ui/: CMakeLists.txt  config.h  imgui-ui.cpp  imgui-ui.hpp  imgui_ui.cpp  imgui_ui.h
ui/include/: imgui-headers.hpp  imgui_headers.h  main-window.hpp  main_window.h  sub-window.hpp  sub_window.h
ui/src/: main-window.cpp  main-window.hpp  main_window.cpp  main_window.h  sub-window.cpp  sub-window.hpp  sub_window.cpp  sub_window.h
utils/: logger.cpp  (+2 more)
(+23 files in other folders)
